# spondee

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/dactyl/: numeric.py  schemas.py  search.py
src/spondee/: numeric.py  search.py
tests/: conftest.py  test_numeric.py  test_search.py
